@@ -145,10 +145,13 @@ extern int slurm_open_slurmdbd_conn(char *auth_info, bool make_agent,
 		tmp_errno = errno;
 	}
 	slurm_mutex_unlock(&slurmdbd_lock);
-
+	
 	slurm_mutex_lock(&agent_lock);
 	if (make_agent && ((agent_tid == 0) || (agent_list == NULL)))
 		_create_agent();
+	else if(agent_list)
+		_load_dbd_state();
+
 	slurm_mutex_unlock(&agent_lock);
 	
 	if(tmp_errno) {
@@ -244,9 +247,10 @@ extern int slurm_send_recv_slurmdbd_msg(uint16_t rpc_version,
 	rc = _send_msg(buffer);
 	free_buf(buffer);
 	if (rc != SLURM_SUCCESS) {
-		error("slurmdbd: Sending message type %u", req->msg_type);
+		error("slurmdbd: Sending message type %u: %d: %m",
+		      req->msg_type, rc);
 		slurm_mutex_unlock(&slurmdbd_lock);
-		return SLURM_ERROR;
+		return rc;
 	}
 
 	buffer = _recv_msg(read_timeout);
@@ -1190,7 +1194,7 @@ static int _send_init_msg()
 	rc = _send_msg(buffer);
 	free_buf(buffer);
 	if (rc != SLURM_SUCCESS) {
-		error("slurmdbd: Sending DBD_INIT message");
+		error("slurmdbd: Sending DBD_INIT message: %d: %m", rc);
 		return rc;
 	}
 
@@ -1519,6 +1523,9 @@ static int _fd_writeable(slurm_fd fd)
  ****************************************************************************/
 static void _create_agent(void)
 {
+	/* this needs to be set because the agent thread will do
+	   nothing if the connection was closed and then opened again */
+	agent_shutdown = 0;
 	if (agent_list == NULL) {
 		agent_list = list_create(_agent_queue_del);
 		if (agent_list == NULL)
@@ -1649,7 +1656,7 @@ static void *_agent(void *x)
 				slurm_mutex_unlock(&slurmdbd_lock);
 				break;
 			}
-			error("slurmdbd: Failure sending message");
+			error("slurmdbd: Failure sending message: %d: %m", rc);
 		} else {
 			rc = _get_return_code(SLURMDBD_VERSION, read_timeout);
 			if (rc == EAGAIN) {
@@ -1658,7 +1665,7 @@ static void *_agent(void *x)
 					break;
 				}
 				error("slurmdbd: Failure with "
-				      "message need to resend");
+				      "message need to resend: %d: %m", rc);
 			}
 		}
 		slurm_mutex_unlock(&slurmdbd_lock);
@@ -1741,7 +1748,7 @@ static void _load_dbd_state(void)
 	char *dbd_fname;
 	Buf buffer;
 	int fd, recovered = 0;
-
+	
 	dbd_fname = slurm_get_state_save_location();
 	xstrcat(dbd_fname, "/dbd.messages");
 	fd = open(dbd_fname, O_RDONLY);
